log/build_2024-02-26_14-12-27/motorpub/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/groupl/MarcWS/install/motorpub/lib/python3.10/site-packages/motorpub/motorpub.py", line 6
    		super().__init))('motor publisher')
    		              ^
SyntaxError: unmatched ')'

